--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,10 +31,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/Estructuras_K.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=..\\..\\..\\Downloads\\jcalendar-1.4.jar
+file.reference.json-simple-1.1.jar=..\\..\\json-simple-1.1.jar\\json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
